// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getCreditInitialData если кредит < цены ОТ, значит меняем местами платеж 1`] = `
Object {
  "amount": Object {
    "from": 100000,
    "to": 1000000,
  },
  "initialFee": 200,
  "loanTerm": 60,
  "minRate": 7.7,
  "payment": Object {
    "from": 3000,
    "to": 3000,
  },
  "paymentAsIs": Object {
    "from": 3000,
    "to": 300,
  },
  "paymentSliderValues": Array [],
  "termSliderValues": Array [
    Object {
      "value": 12,
    },
    Object {
      "value": 24,
    },
    Object {
      "value": 36,
    },
    Object {
      "value": 48,
    },
    Object {
      "value": 60,
    },
  ],
}
`;

exports[`getCreditInitialData если что-то пошло не так выкидываем цену ДО 1`] = `
Object {
  "amount": Object {
    "from": 100000,
    "to": 1000000,
  },
  "initialFee": 400,
  "loanTerm": 60,
  "minRate": 7.7,
  "payment": Object {
    "from": 3000,
    "to": 3000,
  },
  "paymentAsIs": Object {
    "from": 3000,
    "to": 300,
  },
  "paymentSliderValues": Array [],
  "termSliderValues": Array [
    Object {
      "value": 12,
    },
    Object {
      "value": 24,
    },
    Object {
      "value": 36,
    },
    Object {
      "value": 48,
    },
    Object {
      "value": 60,
    },
  ],
}
`;

exports[`getCreditInitialData есть данные, возвращает данные формы 1`] = `
Object {
  "amount": Object {
    "from": 100000,
    "to": 1000000,
  },
  "initialFee": 0,
  "loanTerm": 60,
  "minRate": 7.7,
  "payment": Object {
    "from": 3000,
    "to": 30000,
  },
  "paymentAsIs": Object {
    "from": 2026.2311175519224,
    "to": 30000,
  },
  "paymentSliderValues": Array [],
  "termSliderValues": Array [
    Object {
      "value": 12,
    },
    Object {
      "value": 24,
    },
    Object {
      "value": 36,
    },
    Object {
      "value": 48,
    },
    Object {
      "value": 60,
    },
  ],
}
`;

exports[`getCreditInitialData угадываем цену ДО по платежу (если есть) или берем минимальный amount + ВЗНОС 2 1`] = `
Object {
  "amount": Object {
    "from": 100000,
    "to": 1000000,
  },
  "initialFee": 0,
  "loanTerm": 60,
  "minRate": 7.7,
  "payment": Object {
    "from": 3000,
    "to": 20000,
  },
  "paymentAsIs": Object {
    "from": 2026.2311175519224,
    "to": 20262.311175519226,
  },
  "paymentSliderValues": Array [],
  "termSliderValues": Array [
    Object {
      "value": 12,
    },
    Object {
      "value": 24,
    },
    Object {
      "value": 36,
    },
    Object {
      "value": 48,
    },
    Object {
      "value": 60,
    },
  ],
}
`;

exports[`getCreditInitialData угадываем цену ДО по платежу (если есть) или берем минимальный amount + ВЗНОС 3 1`] = `
Object {
  "amount": Object {
    "from": 100000,
    "to": 1000000,
  },
  "initialFee": 0,
  "loanTerm": 60,
  "minRate": 7.7,
  "payment": Object {
    "from": 3000,
    "to": 3000,
  },
  "paymentAsIs": Object {
    "from": 3000,
    "to": 300,
  },
  "paymentSliderValues": Array [],
  "termSliderValues": Array [
    Object {
      "value": 12,
    },
    Object {
      "value": 24,
    },
    Object {
      "value": 36,
    },
    Object {
      "value": 48,
    },
    Object {
      "value": 60,
    },
  ],
}
`;

exports[`getCreditInitialData угадываем цену ДО по платежу (если есть) или берем минимальный amount и угадываем взнос при отсутствии параметров 1`] = `
Object {
  "amount": Object {
    "from": 100000,
    "to": 1000000,
  },
  "initialFee": 0,
  "loanTerm": 60,
  "minRate": 7.7,
  "payment": Object {
    "from": 3000,
    "to": 20000,
  },
  "paymentAsIs": Object {
    "from": 2026.2311175519224,
    "to": 20262.311175519226,
  },
  "paymentSliderValues": Array [],
  "termSliderValues": Array [
    Object {
      "value": 12,
    },
    Object {
      "value": 24,
    },
    Object {
      "value": 36,
    },
    Object {
      "value": 48,
    },
    Object {
      "value": 60,
    },
  ],
}
`;

exports[`getCreditInitialData угадываем цену ОТ по платежу (если есть) или берем минимальный amount 1 1`] = `
Object {
  "amount": Object {
    "from": 100000,
    "to": 1000000,
  },
  "initialFee": 0,
  "loanTerm": 60,
  "minRate": 7.7,
  "payment": Object {
    "from": 3000,
    "to": 20000,
  },
  "paymentAsIs": Object {
    "from": 2026.2311175519224,
    "to": 20262.311175519226,
  },
  "paymentSliderValues": Array [],
  "termSliderValues": Array [
    Object {
      "value": 12,
    },
    Object {
      "value": 24,
    },
    Object {
      "value": 36,
    },
    Object {
      "value": 48,
    },
    Object {
      "value": 60,
    },
  ],
}
`;

exports[`getCreditInitialData угадываем цену ОТ по платежу (если есть) или берем минимальный amount 2 1`] = `
Object {
  "amount": Object {
    "from": 100000,
    "to": 1000000,
  },
  "initialFee": 0,
  "loanTerm": 60,
  "minRate": 7.7,
  "payment": Object {
    "from": 3000,
    "to": 3000,
  },
  "paymentAsIs": Object {
    "from": 3000,
    "to": 300,
  },
  "paymentSliderValues": Array [],
  "termSliderValues": Array [
    Object {
      "value": 12,
    },
    Object {
      "value": 24,
    },
    Object {
      "value": 36,
    },
    Object {
      "value": 48,
    },
    Object {
      "value": 60,
    },
  ],
}
`;
